<resources>
    <string name="app_name">Travel Journal</string>
    <string name="register_text">Hello, let\'s set you up first!</string>
    <string name="register_username">Name</string>
    <string name="register_email">Email</string>
    <string name="register_save">Save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="register_invalid_username">Invalid username.</string>
    <string name="register_invalid_email">Invalid email address.</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_row_trip_name">Trip Name</string>
    <string name="home_row_trip_destination">Trip Destination</string>
    <string name="home_row_trip_price">%1$d €</string>
    <string name="display_price_format">You spent %1$d € on this trip.</string>
    <string name="trip_title">Add a new trip</string>
    <string name="trip_name">Trip name</string>
    <string name="trip_type_city_break">City Break</string>
    <string name="trip_type_sea_side">Sea Side</string>
    <string name="trip_type_mountains">Mountains</string>
    <string name="trip_start_date">Start Date</string>
    <string name="trip_end_date">End date</string>
    <string name="trip_default_date">01/01/2021</string>
    <string name="trip_date_format">%1$d/%2$d/%3$d</string>
    <string name="trip_save">Save</string>
    <string name="trip_destination">Trip destination</string>
    <string name="trip_add">Add</string>
    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="contact_email_1">vladescualexandra18@stud.ase.ro</string>
    <string name="contact_email_2">vladescubianca26@gmail.com</string>
    <string name="about_created_by">Project created by Vlădescu Alexandra-Bianca during Android Fundamentals Course @ 2020</string>
    <string name="about_icons_from">Icons from</string>
    <string name="delete_yes">Yes</string>
    <string name="delete_no">No</string>
    <string name="invalid_text_input">Input should have more than 3 characters.</string>
    <string name="invalid_destination">Invalid destination for weather! :(</string>
</resources>