<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/nav_contact" />

        <item
            android:id="@+id/nav_share"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/nav_share" />
    </group>
</menu>