<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".TripActivity">

    <TextView
        android:id="@+id/trip_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:text="@string/trip_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_name" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trip_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_destination" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/trip_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/trip_type_city_break"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/trip_type_city_break" />

        <RadioButton
            android:id="@+id/trip_type_sea_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trip_type_sea_side" />

        <RadioButton
            android:id="@+id/trip_type_mountains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trip_type_mountains" />
    </RadioGroup>

    <com.warkiz.widget.IndicatorSeekBar
        android:id="@+id/trip_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isb_indicator_color="@color/reply_blue_600"
        app:isb_indicator_text_color="@color/white"
        app:isb_indicator_text_size="18sp"
        app:isb_max="100"
        app:isb_min="0.0"
        app:isb_progress="1"
        app:isb_seek_smoothly="true"
        app:isb_show_indicator="rounded_rectangle"
        app:isb_show_tick_marks_type="oval"
        app:isb_show_tick_texts="true"
        app:isb_thumb_color="@color/reply_blue_800"
        app:isb_thumb_size="20dp"
        app:isb_thumb_text_color="@color/white"
        app:isb_tick_marks_color="@color/reply_blue_600"
        app:isb_tick_marks_size="13dp"
        app:isb_tick_texts_color="@color/reply_blue_800"
        app:isb_tick_texts_size="15sp"
        app:isb_ticks_count="3"
        app:isb_track_background_size="2dp"
        app:isb_track_progress_color="@color/reply_blue_600"
        app:isb_track_progress_size="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/trip_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/trip_default_date" />

        <ImageButton
            android:id="@+id/trip_edit_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@android:drawable/ic_menu_edit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/trip_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/trip_default_date" />

        <ImageButton
            android:id="@+id/trip_edit_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@android:drawable/ic_menu_edit" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/trip_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1" />

    <Button
        android:id="@+id/trip_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/trip_save" />

</LinearLayout>